--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
@@ -29,6 +30,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.12",
+    "@types/styled-components-react-native": "^5.1.1",
     "typescript": "~4.0.0"
   },
   "private": true
